nullity, enums and generics